# lem_in_42

./: CMakeLists.txt  Makefile  a.out  lem-in_linker.c  lem_in.h  lem_in_algo.c  lem_in_linker.c  lem_in_linker.c-e  lem_in_norme_algo_0.c  lem_in_norme_algo_1.c  lem_in_norme_algo_2.c  lem_in_norme_algo_3.c  lem_in_norme_algo_4.c  lem_in_norme_algo_5.c  lem_in_norme_algo_6.c  lem_in_norme_linker_0.c  lem_in_norme_wave_0.c  lem_int_wave.c  main.c  main_norme.c  main_norme_0.c  test.txt  trash_cor_norme_3.c  trash_for_norme.c  trash_for_norme_1.c
libft/: Makefile  author  ft_alist_initialize.c  ft_atoi.c  ft_bchr.c  ft_bzero.c  ft_doop.c  ft_exponentiation.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base_printf.c  ft_itoa_base_printf_u.c  ft_len_swap.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memcpy_end.c  ft_memdel.c  ft_memjn.c  ft_memjoin.c  ft_memmove.c  ft_memset.c  ft_neo_its_matrix.c  ft_printf.c  ft_printf.h  ft_printf.h.gch  ft_printf_core.c  ft_printf_core_2.c  (+45 more)
